@@ -71,6 +71,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import net.fortuna.ical4j.data.CalendarBuilder;
 import net.fortuna.ical4j.model.Calendar;
@@ -624,7 +625,7 @@ public class MaintenanceManagerTest extends BaseTestCaseWithUser {
                         event.getName(),
                         Instant.ofEpochMilli(event.getFromMilliseconds()).toString(),
                         Instant.ofEpochMilli(event.getToMilliseconds()).toString()))
-                .toList();
+                .collect(Collectors.toList());
 
         assertEquals(List.of(
                 Triple.of("SAP Maintenance Window", "2020-04-27T06:00:00Z", "2020-04-27T08:00:00Z"),
@@ -659,7 +660,7 @@ public class MaintenanceManagerTest extends BaseTestCaseWithUser {
                         event.getName(),
                         Instant.ofEpochMilli(event.getFromMilliseconds()).toString(),
                         Instant.ofEpochMilli(event.getToMilliseconds()).toString()))
-                .toList();
+                .collect(Collectors.toList());
 
         assertEquals(List.of(
                 Triple.of("SAP Maintenance Window", "2020-04-27T06:00:00Z", "2020-04-27T08:00:00Z"),
@@ -678,7 +679,7 @@ public class MaintenanceManagerTest extends BaseTestCaseWithUser {
                         event.getName(),
                         Instant.ofEpochMilli(event.getFromMilliseconds()).toString(),
                         Instant.ofEpochMilli(event.getToMilliseconds()).toString()))
-                .toList();
+                .collect(Collectors.toList());
 
         assertEquals(List.of(
                 Triple.of("SAP Maintenance Window", "2020-04-27T06:00:00Z", "2020-04-27T08:00:00Z"),
